add forecast week validation (#419)